Hyperparam sweep, data/model to gpu and back.

--- a/scripts/01 Pytorch and WandB.ipynb
+++ b/scripts/01 Pytorch and WandB.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torchvision\n",
-    "from torchvision import datasets, transforms\n",
-    "import matplotlib.pyplot as plt\n",
-    "import wandb\n",
-    "from src.deterministic_behavior import set_seeds"
+    "# import torch\n",
+    "# import torch.nn as nn\n",
+    "# import torch.optim as optim\n",
+    "# import torchvision\n",
+    "# from torchvision import datasets, transforms\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import wandb\n",
+    "# from src.deterministic_behavior import set_seeds"
    ]
   },
   {
@@ -30,19 +30,25 @@
     }
    ],
    "source": [
-    "set_seeds()\n",
-    "\n"
+    "# set_seeds()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:1\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
-    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -58,7 +64,10 @@
     "torch.cuda.manual_seed_all(hash(\"so runs are repeatable\") % 2**32 - 1)\n",
     "\n",
     "# Device configuration\n",
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# device = torch.device(\"cuda:1\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda:1\")\n",
+    "\n",
+    "print(device)\n",
     "\n",
     "# remove slow mirror from list of MNIST mirrors\n",
     "torchvision.datasets.MNIST.mirrors = [mirror for mirror in torchvision.datasets.MNIST.mirrors\n",
@@ -67,29 +76,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33megealtan\u001b[0m (use `wandb login --relogin` to force relogin)\n"
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Calling wandb.login() after wandb.init() has no effect.\n"
      ]
     },
     {
      "data": {
       "text/html": [
+       "Finishing last run (ID:30hdc1f3) before initializing another..."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br/>Waiting for W&B process to finish, PID 30046... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5bd566f362fc435b9c34b04bdf7b557a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: right }\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\">\n",
+       "</div><div class=\"wandb-col\">\n",
+       "</div></div>\n",
+       "Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)\n",
+       "<br/>Synced <strong style=\"color:#cdcd00\">devout-eon-13</strong>: <a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/30hdc1f3\" target=\"_blank\">https://wandb.ai/egealtan/pytorch-demo/runs/30hdc1f3</a><br/>\n",
+       "Find logs at: <code>./wandb/run-20211229_003745-30hdc1f3/logs</code><br/>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Successfully finished last run (ID:30hdc1f3). Initializing new run:<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
        "\n",
-       "                    Syncing run <strong><a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/3k0dzmbi\" target=\"_blank\">breezy-resonance-6</a></strong> to <a href=\"https://wandb.ai/egealtan/pytorch-demo\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+       "                    Syncing run <strong><a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/2qmu5z3z\" target=\"_blank\">robust-aardvark-14</a></strong> to <a href=\"https://wandb.ai/egealtan/pytorch-demo\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
        "\n",
        "                "
       ],
@@ -111,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_pipeline(hyperparameters):\n",
     "\n",
     "    # tell wandb to get started\n",
-    "    run = wandb.init(project=\"pytorch-demo\", config=hyperparameters)\n",
+    "    run = wandb.init(project=\"pytorch-demo\", config=hyperparameters) #TODO edit here for easy project name -- use name\n",
     "    run._label(repo=\"whatsai_code\")\n",
     "    # access all HPs through wandb.config, so logging matches execution!\n",
     "    config = wandb.config\n",
@@ -154,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,13 +390,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Finishing last run (ID:3k0dzmbi) before initializing another..."
+       "Finishing last run (ID:2mzvpsoj) before initializing another..."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -335,7 +408,7 @@
     {
      "data": {
       "text/html": [
-       "<br/>Waiting for W&B process to finish, PID 12467... <strong style=\"color:green\">(success).</strong>"
+       "<br/>Waiting for W&B process to finish, PID 12792... <strong style=\"color:green\">(success).</strong>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -347,12 +420,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f37d993c82b8496ab6c6f9f557c49283",
+       "model_id": "d2a6dfff0051440cad70eb07fc159a80",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+       "VBox(children=(Label(value=' 0.11MB of 0.11MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
       ]
      },
      "metadata": {},
@@ -367,11 +440,12 @@
        "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
        "    </style>\n",
        "<div class=\"wandb-row\"><div class=\"wandb-col\">\n",
-       "</div><div class=\"wandb-col\">\n",
+       "<h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>▁▁▁▃▃▃▃▅▅▅▅▆▆▆▆███</td></tr><tr><td>loss</td><td>█▄▃▄▃▄▃▁▂▂▁▁▂▁▁▁▁▁</td></tr><tr><td>test_accuracy</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\">\n",
+       "<h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>epoch</td><td>4</td></tr><tr><td>loss</td><td>0.01262</td></tr><tr><td>test_accuracy</td><td>0.983</td></tr></table>\n",
        "</div></div>\n",
-       "Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)\n",
-       "<br/>Synced <strong style=\"color:#cdcd00\">breezy-resonance-6</strong>: <a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/3k0dzmbi\" target=\"_blank\">https://wandb.ai/egealtan/pytorch-demo/runs/3k0dzmbi</a><br/>\n",
-       "Find logs at: <code>./wandb/run-20211227_195910-3k0dzmbi/logs</code><br/>\n"
+       "Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 1 other file(s)\n",
+       "<br/>Synced <strong style=\"color:#cdcd00\">bright-river-19</strong>: <a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/2mzvpsoj\" target=\"_blank\">https://wandb.ai/egealtan/pytorch-demo/runs/2mzvpsoj</a><br/>\n",
+       "Find logs at: <code>./wandb/run-20211229_015841-2mzvpsoj/logs</code><br/>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -383,7 +457,7 @@
     {
      "data": {
       "text/html": [
-       "Successfully finished last run (ID:3k0dzmbi). Initializing new run:<br/>"
+       "Successfully finished last run (ID:2mzvpsoj). Initializing new run:<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -396,7 +470,7 @@
      "data": {
       "text/html": [
        "\n",
-       "                    Syncing run <strong><a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/104parps\" target=\"_blank\">dazzling-planet-7</a></strong> to <a href=\"https://wandb.ai/egealtan/pytorch-demo\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
+       "                    Syncing run <strong><a href=\"https://wandb.ai/egealtan/pytorch-demo/runs/3j7todv2\" target=\"_blank\">ancient-frog-20</a></strong> to <a href=\"https://wandb.ai/egealtan/pytorch-demo\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">docs</a>).<br/>\n",
        "\n",
        "                "
       ],
@@ -429,7 +503,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69473182ca3742778c632ba03f4f3e38",
+       "model_id": "95c1217639ec479b8b5cfaa78624f91e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,31 +518,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss after 03072 examples: 0.472\n",
-      "Loss after 06272 examples: 0.246\n",
-      "Loss after 09472 examples: 0.077\n",
-      "Loss after 12640 examples: 0.195\n",
-      "Loss after 15840 examples: 0.055\n",
-      "Loss after 19040 examples: 0.101\n",
-      "Loss after 22240 examples: 0.123\n",
-      "Loss after 25408 examples: 0.096\n",
-      "Loss after 28608 examples: 0.016\n",
-      "Loss after 31808 examples: 0.095\n",
-      "Loss after 35008 examples: 0.023\n",
-      "Loss after 38176 examples: 0.018\n",
-      "Loss after 41376 examples: 0.037\n",
-      "Loss after 44576 examples: 0.050\n",
-      "Loss after 47776 examples: 0.074\n",
-      "Loss after 50944 examples: 0.016\n",
-      "Loss after 54144 examples: 0.046\n",
-      "Loss after 57344 examples: 0.061\n",
-      "Accuracy of the model on the 2000 test images: 98.25%\n"
+      "Loss after 03072 examples: 0.357\n",
+      "Loss after 06272 examples: 0.210\n",
+      "Loss after 09472 examples: 0.099\n",
+      "Loss after 12640 examples: 0.090\n",
+      "Loss after 15840 examples: 0.112\n",
+      "Loss after 19040 examples: 0.105\n",
+      "Loss after 22240 examples: 0.151\n",
+      "Loss after 25408 examples: 0.033\n",
+      "Loss after 28608 examples: 0.042\n",
+      "Loss after 31808 examples: 0.033\n",
+      "Loss after 35008 examples: 0.026\n",
+      "Loss after 38176 examples: 0.022\n",
+      "Loss after 41376 examples: 0.026\n",
+      "Loss after 44576 examples: 0.028\n",
+      "Loss after 47776 examples: 0.010\n",
+      "Loss after 50944 examples: 0.014\n",
+      "Loss after 54144 examples: 0.031\n",
+      "Loss after 57344 examples: 0.104\n",
+      "Accuracy of the model on the 2000 test images: 97.95%\n"
      ]
     }
    ],
    "source": [
     "# Build, train and analyze the model with the pipeline\n",
-    "model = model_pipeline(config)"
+    "model = model_pipeline(config)\n",
+    "wandb.alert(title='Test Run', text=f'Run Finished! with params:\\nConfig:\\n{config}') # This will send a Slack message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bright-river-19\n"
+     ]
+    }
+   ],
+   "source": [
+    "api = wandb.Api()\n",
+    "username = wandb.run.entity\n",
+    "project = wandb.run.project\n",
+    "name = wandb.run.name\n",
+    "print(name)\n"
    ]
   },
   {
